fdo#61203 initialise m_aComposedTableName *before* trying to use it

Change-Id: Ie7a19bdfe9e7bc729a62191362ce0779d73385a0